--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,16 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'android.arch.lifecycle:livedata:1.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.dagger:dagger:2.33'
-    kapt 'com.google.dagger:dagger-compiler:2.26'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    implementation 'com.google.dagger:dagger:2.35.1'
+   kapt 'com.google.dagger:dagger-compiler:2.26'
+    implementation 'com.google.dagger:dagger-android:2.35.1'
+    implementation 'com.google.dagger:dagger-android-support:2.33' // if you use the support libraries
+//    kapt 'com.google.dagger:dagger-android-processor:2.33'
+
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'wu.seal.jsontokotlin:library:3.6.1'
